# sentinel

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
apps/api/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/api/src/: config.py  main.py
apps/api/src/routers/: v1.py
apps/api/src/schemas/: feature_factory.py  requests.py
apps/api/src/services/: audit.py  features.py  fraud_model.py  sanctions.py
apps/api/src/utils/: countries.py
apps/api/tests/: test_score.py
apps/web/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/web/public/assets/: sample-transactions.csv
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/analytics/: page.tsx
apps/web/src/app/batch/: page.tsx
apps/web/src/components/: analytics.tsx  app-shell.tsx  compliance-report.tsx  copy-button.tsx  devbrew-banner.tsx  feature-importance.tsx  footer.tsx  latency-badge.tsx  nav-header.tsx  risk-gauge.tsx  sanctions-card.tsx  skeleton-results.tsx  theme-toggle.tsx  transaction-form.tsx  transaction-history.tsx  transaction-route.tsx  velocity-indicators.tsx
apps/web/src/components/__tests__/: transaction-form.test.tsx
apps/web/src/components/ui/: alert-dialog.tsx  alert.tsx  badge.tsx  button.tsx  card.tsx  command.tsx  country-combobox.tsx  dialog.tsx  input.tsx  popover.tsx  select.tsx  tabs.tsx
apps/web/src/lib/: api.ts  countries.ts
apps/web/src/types/: index.ts
data_catalog/processed/: feature_registry.json  sanctions_eval_labels.csv  sanctions_evaluation_results.csv
data_catalog/processed/processed/: sanctions_evaluation_results.csv
docs/: case-study-summary.md  research-requirements.md  roadmap.md
docs/findings/: README.md  api-implementation-notes.md  data-exploration-notes.md  model-training-notes.md  phase-3-sanctions-screening.md  sanctions-screening-notes.md
notebooks/: 02_feature_engineering.ipynb  03_model_training.ipynb  04_sanctions_screening.ipynb  05_sanctions_evaluation.ipynb  05_sanctions_evaludation.ipynb
