[project]
name = "fraud-api"
version = "0.1.0"
description = "FastAPI service for real-time fraud detection and sanctions screening"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # ML Runtime
    "lightgbm>=4.1.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    # Fuzzy Matching (required by packages.compliance.sanctions_api)
    "rapidfuzz>=3.6.0",
    # Database & Cache
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.31.0",
    "greenlet>=3.2.4",
    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

